Add event creation and even scheduling

--- a/js/views/templates/group-schedule.html
+++ b/js/views/templates/group-schedule.html
@@ -1,1 +1,6 @@
-<div> Hi </div>
+<nav id="group-nav"></nav>
+<div class="col-xs-12 header">
+    <h3 class="underline"> <%- title %> </h3>
+    <a href="../add/session/" id="new-session-button" class="btn btn-info pull-right">New Session</a>
+</div>
+
