--- a/core/templates/pages/base.html
+++ b/core/templates/pages/base.html
@@ -19,6 +19,7 @@
       <!--<link rel="stylesheet" href="/static/css/main.css">-->
       <link rel="stylesheet" href="/static/lib/bootstrap-datetimepicker.min.css">
       <link rel="stylesheet" href="/static/lib/bootstrap-sortable.css">
+      <link rel="stylesheet" href="/static/lib/select2.min.css">
       
       <script src="/static/lib/less.min.js" type="text/javascript"></script>
       <script src="/static/js/main.js"></script>
