--- a/js/views/templates/schedule-list-item.html
+++ b/js/views/templates/schedule-list-item.html
@@ -1,17 +1,17 @@
-<div class="col-md-12">
+<div class="col-md-12 list-item">
     <div class="panel-group">
       <div class="panel <% if(session.get('regected_timestamp')){ %> panel-muted  text-muted <% }else{ %> panel-default <% } %>">
         <div class="panel-heading clearfix">
           <div class="pull-right">
           <% if(session.get("permissions").indexOf("approve")){ %>
-            <a href="/accept-session/{{session.id}}/" class="btn btn-xs btn-success" data-toggle="tooltip" data-placement="top" title="Approve"><span class="glyphicon glyphicon-ok"></span></a>
-            <a href="/reject-session/{{session.id}}/" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Reject"><span class="glyphicon glyphicon-remove"></span></a>
+            <a href="/accept-session/{{session.id}}/" class="btn btn-sm btn-success" data-toggle="tooltip" data-placement="top" title="Approve"><span class="glyphicon glyphicon-ok"></span></a>
+            <a href="/reject-session/{{session.id}}/" class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Reject"><span class="glyphicon glyphicon-remove"></span></a>
           <% } %>
           <% if(session.get("permissions").indexOf("edit")){ %>
-            <a href="/edit/session/<%- session.get('id') %>/" class="btn btn-xs btn-primary" data-toggle="tooltip" data-placement="top" title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
+            <a href="/edit/session/<%- session.get('id') %>/" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
           <% } %>
           <% if(session.get("permissions").indexOf("delete")){ %>
-            <a href="/delete-session/<%- session.get('id') %>/" class="btn btn-xs btn-danger"
+            <a href="/delete-session/<%- session.get('id') %>/" class="btn btn-sm btn-danger"
               data-toggle="confirmation"
               data-placement="top"
               data-title="Delete?"
@@ -23,8 +23,8 @@
               > <span class="glyphicon glyphicon-trash"></span></a>
           <% } %>
           </div>
-          <h3 data-toggle="collapse" href="#collapse<%-session.get('id')%>" class="panel-title clearfix session-header pointer">
-            <%- session.get("time_range") %> EST <strong><%- event.get("title") %></strong>
+          <h3 data-toggle="collapse" href="#collapse<%-session.get('id')%>" class="panel-title session-header pointer">
+            <%- session.get("time_range") %> <strong><%- event.get("title") %></strong>
             <% if(session.get("rejected_timestamp")){ %>
               <span class="label label-danger">Rejected</span>
             <% } %>
@@ -74,11 +74,9 @@
               <form class="register-form form-inline"> 
               <table class="table-condensed align-middle">
                 <tr><td>
-                  <button class="btn btn-sm btn-primary">Register</button>
+                  <button class="btn btn-md btn-primary">Register</button>
                 </td><td>
-                  <label class="control-label">
-                    <input type="checkbox" name="backup">Backup
-                  </label>
+                  <button class="btn btn-md btn-info">Wait List</button>
 
                 </td></tr>
               </table>
